include/microutils/microutils.h


#define MU_HEX_CHARS "0123456789abcdef"
#define MU_HEX_UCHARS "0123456789ABCDEF"
#define MU_DEF_MIME "application/octet-stream"
#define MU_ZBUF_CHUNK (16384)
MU_EXTERN const char *mu_ver();
MU_EXTERN int mu_errno();
MU_EXTERN char *mu_err(int errnum);
MU_EXTERN void *mu_alloc(size_t size);
MU_EXTERN void mu_free(void *ptr) __nonnull((1));
MU_EXTERN bool mu_exec2(const char *dir, const char *name, const char **args, bool waited, bool showed, bool term,
                        int timeout) __nonnull((2));
MU_EXTERN bool mu_exec(const char *name) __nonnull((1));
MU_EXTERN char *mu_replace(const char *str, const char *substr, const char *rep) __nonnull((1, 2, 3));
MU_EXTERN char *mu_mreplace(const char *str, const char *rep, ...) __nonnull((1, 2));
typedef bool (*mu_split_cb)(void *cls, const char *step, const char *token);
MU_EXTERN bool mu_split(const char *str, const char *delim, mu_split_cb cb, void *cls) __nonnull((1, 2));
MU_EXTERN char *mu_trim(const char *str) __nonnull((1));
MU_EXTERN char *mu_ltrim(const char *str) __nonnull((1));
MU_EXTERN char *mu_rtrim(const char *str) __nonnull((1));
MU_EXTERN char *mu_nums(const char *str) __nonnull((1));
MU_EXTERN char *mu_between(const char *str, const char *p1, const char *p2) __nonnull((1, 2, 3));
MU_EXTERN char *mu_ibetween(const char *str, const char *p1, const char *p2) __nonnull((1, 2, 3));
MU_EXTERN char *mu_fmt(const char *fmt, ...) __nonnull((1)) __format(1, 2);
MU_EXTERN bool mu_is_empty(const char *str);
MU_EXTERN void mu_uitoh(uint8_t val, char *hex) __nonnull((2));
MU_EXTERN void mu_uitouh(uint8_t val, char *hex) __nonnull((2));
MU_EXTERN char *mu_stoh(const char *str) __nonnull((1));
MU_EXTERN char *mu_stouh(const char *str) __nonnull((1));
MU_EXTERN const char *mu_size_unit(uint64_t size);
MU_EXTERN char *mu_now_rfc2822();
MU_EXTERN bool mu_remove(const char *path) __nonnull((1));
MU_EXTERN bool mu_rename(const char *old_path, const char *new_path) __nonnull((1, 2));
MU_EXTERN bool mu_exists(const char *path) __nonnull((1));
MU_EXTERN char *mu_change_ext(const char *filename, const char *ext) __nonnull((1, 2));
MU_EXTERN char *mu_ext(const char *filename) __nonnull((1));
MU_EXTERN char *mu_filename(const char *filename) __nonnull((1));
MU_EXTERN char *mu_path(const char *filename) __nonnull((1));
MU_EXTERN char *mu_ftos(const char *filename) __nonnull((1));
MU_EXTERN bool mu_stofa(const char *str, const char *filename, bool append);
MU_EXTERN bool mu_stof(const char *str, const char *filename);
MU_EXTERN const char *mu_etomime(const char *ext) __nonnull((1));
MU_EXTERN const char *mu_fntomime(const char *filename) __nonnull((1));
typedef bool (*mu_mmatch_cb)(void *cls, const char *str, size_t start, size_t end);
MU_EXTERN bool mu_mmatch(const char *pattern, const char *str, bool ncase, mu_mmatch_cb cb,
                         void *cls) __nonnull((1, 2, 4));
MU_EXTERN bool mu_match(const char *pattern, const char *str) __nonnull((1, 2));
MU_EXTERN bool mu_match2(const char *pattern, const char *str, bool ncase) __nonnull((1, 2));
MU_EXTERN bool mu_imatch(const char *pattern, const char *str) __nonnull((1, 2));
typedef size_t (*mu_zstream_data_cb)(void *cls, void *buf, size_t len);
typedef bool (*mu_zstream_eof_cb)(void *cls);
MU_EXTERN int mu_zdeflate(mu_zstream_data_cb read_cb, void *read_cls, mu_zstream_data_cb write_cb, void *write_cls,
                          mu_zstream_eof_cb eof_cb, void *eof_cls, int level) __nonnull((1, 2, 3, 4, 5, 6));
MU_EXTERN int mu_zfdeflate(const char *filename_in, const char *filename_out, int level) __nonnull((1, 2));
MU_EXTERN int mu_zinflate(mu_zstream_data_cb read_cb, void *read_cls, mu_zstream_data_cb write_cb,
                          void *write_cls) __nonnull((1, 2, 3, 4));
MU_EXTERN int mu_zfinflate(const char *filename_in, const char *filename_out) __nonnull((1, 2));
MU_EXTERN const char *mu_zerr(int zerrnum);
MU_EXTERN unsigned char *mu_b64enc(const unsigned char *src, size_t len, size_t *out_len) __nonnull((1, 3));
MU_EXTERN unsigned char *mu_b64dec(const unsigned char *src, size_t len, size_t *out_len) __nonnull((1, 3));